# JellyPlex-Watched

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.old  Dockerfile.slim  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml
src/: black_white.py  connection.py  emby.py  functions.py  jellyfin.py  jellyfin_emby.py  library.py  main.py  plex.py  plex_cache.py  users.py  watched.py
test/: ci.env  ci1.env  ci2.env  ci3.env  ci_emby.env  ci_guids.env  ci_jellyfin.env  ci_locations.env  ci_plex.env  ci_write.env  requirements.txt  test_black_white.py  test_library.py  test_main.py  test_main_.py  test_main_cleanup_watched.py  test_plex_cache.py  test_sync.py  test_users.py  test_watched.py  validate_ci_marklog.py
