[project]
name = "jellyplex-watched"
version = "7.0.4"
description = "Sync watched between media servers locally"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "packaging==25.0",
    "plexapi==4.17.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
]

[dependency-groups]
lint = [
    "ruff>=0.12.3",
]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "types-requests>=2.32.0.20250611",
]
